--- a/src/Component/Footer/Footer.css
+++ b/src/Component/Footer/Footer.css
@@ -55,7 +55,7 @@
   text-align: center;
   margin-top: 10px;
   font-size: 14px;
-  color: var(--primary-color);
+  color: var(--secondary-color);
   border-top: 1px solid var(--secondary-color);
   padding-top: 10px;
 }
