--- a/src/Component/Footer/Footer.css
+++ b/src/Component/Footer/Footer.css
@@ -47,8 +47,7 @@
 }
 
 .whatsapp-link:hover {
-  text-decoration: underline;
-  color: var(--primary-color);
+  color: var(--third-color);
 }
 
 .footer-bottom {
