Adiciona galeria de fotos com carrossel na HomePage; atualiza estilos e dependências do slick-carousel.

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+/* Importação dos estilos do slick-carousel */
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
+
+
 :root {
   --primary-color: #1a2a4a;
   --secondary-color: #c89855;
