--- a/src/Component/HomePage/HomePage.css
+++ b/src/Component/HomePage/HomePage.css
@@ -192,6 +192,80 @@
   background-color: var(--primary-color);
 }
 
+/* Seção de galeria de fotos */
+.gallery-section {
+  background-color: var(--third-color);
+  padding: 40px 200px;
+  text-align: center;
+}
+
+.gallery-section h2 {
+  font-size: 2rem;
+  color: var(--primary-color);
+  margin-bottom: 20px;
+}
+
+.gallery-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 15px;
+  margin-top: 20px;
+}
+
+.gallery-grid img {
+  width: 10%;
+  height: auto;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.gallery-grid img:hover {
+  transform: scale(1.05);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+}
+
+.gallery-slider {
+  margin-top: 20px;
+}
+
+.gallery-slide {
+  padding: 15px; 
+}
+
+.gallery-slide img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.gallery-slide img:hover {
+  transform: scale(1.05);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+}
+
+/* Estilo para as setas de navegação */
+.slick-prev,
+.slick-next {
+
+  z-index: 10;
+}
+
+.slick-prev:hover,
+.slick-next:hover {
+  color: var(--secondary-color) !important; 
+}
+
+.slick-prev {
+  left: -40px; 
+}
+
+.slick-next {
+  right: -40px; 
+}
+
 /* Responsividade */
 @media (max-width: 1024px) {
   .card {
@@ -227,5 +301,29 @@
 
   .hero-text p {
     font-size: 0.9rem;
+  }
+
+  .gallery-grid {
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  }
+
+  /* Ajustes para a galeria em telas menores */
+  .gallery-section {
+    padding: 20px; 
+  }
+
+  .gallery-slide img {
+    width: 90%; 
+    margin: 0 auto; 
+  }
+}
+
+@media (max-width: 480px) {
+  .gallery-section h2 {
+    font-size: 1.5rem; 
+  }
+
+  .gallery-slide img {
+    width: 100%; 
   }
 }
