Add new project images and remove outdated assets
- Added new images for various projects including TELLUS, Amazonas, Lacus, Mansoes de Acutuba, Portal da Collina, Primaville, and Terramazonia.
- Introduced new Thalita images for branding purposes.
- Deleted outdated SVG file 'constroi-marca-2020.svg' and several Thalita-related images that were no longer needed.

--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,16 @@
 @import "~slick-carousel/slick/slick-theme.css";
 
 
+
 :root {
   --primary-color: #1a2a4a;
   --secondary-color: #c89855;
   --third-color: #efcdb1;
+  --font-family: 'Modeska', 'Montserrat', sans-serif;
 }
 
+body {
+  font-family: var(--font-family);
+}
 
 
