--- a/src/Component/WhatsApp/WhatsApp.css
+++ b/src/Component/WhatsApp/WhatsApp.css
@@ -18,7 +18,7 @@
 
 .whatsapp-button.animate {
   animation: vibrate 0.2s infinite;
-  animation-delay: 5s; /* Inicia a animação após 5 segundos */
+  animation-delay: 5s; 
 }
 
 .whatsapp-form {
